# Enterprise_AI_Platform

./: .env.example  .gitignore  =2.31  =4.0  README.md  README_main1.md  pyproject.toml  requirements.txt
docs/: business_capability_map.md  business_process_model.md  ecosystem_context.md  insurance_domain_blueprint_v1.md  knowledge_repository.md
docs/architecture/: 00_VISION.md  01_DESIGN_PRINCIPLES.md  02_SYSTEM_OVERVIEW.md  03_DOMAIN_LANGUAGE.md  04_PLATFORM_ARCHITECTURE.md  05_PLATFORM_KERNEL.md  06_SERVICE_CONTRACTS.md  07_EVENT_MODEL.md  08_DATA_MODEL_AND_DTOS.md  09_REQUEST_LIFECYCLE.md  10_IMPLEMENTATION_ROADMAP.md  12_IMPLEMENTATION_STANDARDS.md  13_KNOWLEDGE_ENGINE_ARCHITECTURE.md  14_PLATFORM_RUNTIME_ARCHITECTURE.md
docs/implementation/: 00_PLATFORM_BACKLOG.md  11_DEVELOPER_GUIDE.md
docs/specifications/: 01_KNOWLEDGE_ENGINE_SPECIFICATION.md  02_WORKFLOW_ENGINE_SPECIFICATION.md  03_PROMPT_ENGINE_SPECIFICATION.md  04_AGENT_RUNTIME_SPECIFICATION.md  05_MODEL_ENGINE_SPECIFICATION.md  06_TOOL_ENGINE_SPECIFICATION.md  07_EXECUTION_ENGINE_SPECIFICATION.md  08_CONTEXT_ENGINE_SPECIFICATION.md  09_MEMORY_ENGINE_SPECIFICATION.md  10_REASONING_ENGINE_SPECIFICATION.md  11_SECURITY_GOVERNANCE_SPECIFICATION.md  12_OBSERVABILITY_SPECIFICATION.md
examples/model_LLM/: model_engine_bootstrap.py
knowledge/: README.md
knowledge/claims/: README.md  canonical_schema.csv  entity_catalog.csv  glossary.csv
knowledge/coverage/: README.md  canonical_schema.csv  entity_catalog.csv  glossary.csv
knowledge/customer/: README.md  canonical_schema.csv  (+2 more)
scripts/: load_datasets.py
(+843 files in other folders)
