[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-ai-platform"
version = "1.0.0"
description = "Metadata-Driven Enterprise AI Platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Dhammadip Kamble" }
]

dependencies = [
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

testpaths = [
    "tests"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP"
]
